--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.1",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.12",
+    "vue-feather-icons": "^5.1.0",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   },
